# AugOOD

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
src/: angle_options.cpp  angle_options.h  kernel_options.cpp  kernel_options.h  main.cpp  noise_options.cpp  noise_options.h  range_options.h  run_options.cpp  run_options.h
